dep-nginx-red.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: red
  name: nginx-deploy-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
