svc-nginx-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue-service
spec:
  selector:
    app: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
