svc-nginx-red.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-red-service
spec:
  selector:
    app: red
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
