hello-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: dev
spec:
  rules:
    - host: "test.hauver.lab"
      http:
        paths:
          - backend:
              service:
                name: hello-service
                port:
                  number: 80
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - test.hauver.lab
      secretName: hello-app-tls
